fixed spacing

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -606,6 +606,10 @@ video {
 .border-2 {
   border-width: 2px;
 }
+.border-y-2 {
+  border-top-width: 2px;
+  border-bottom-width: 2px;
+}
 .border-b-2 {
   border-bottom-width: 2px;
 }
@@ -656,6 +660,9 @@ video {
 }
 .pb-12 {
   padding-bottom: 3rem;
+}
+.pt-24 {
+  padding-top: 6rem;
 }
 .text-center {
   text-align: center;
